# RAG_Project

./: .gitignore  ARCHITECTURE.md  RAG_Prototype_6.1.py  README.md  TASK.md  main.py  pyproject.toml
AGENT_DESCRIPTION/: Lead_Engineer.md  SDET.md  System_Architect.md
AGENT_TOOLS/: FOLDER_DESCRIPTION.md
config/: settings.yaml
legacy/: ARCHITECTURE_OLD.md
logs/: FOLDER_DESCRIPTION.md
src/core/: config.py  pipeline.py
src/ingestion/: loader.py  vector_store.py
src/modules/: base.py  generator.py  hyde.py  parent_retriever.py  reranker.py  rewriter.py
src/rag_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: __init__.py  check_device.py  console.py  device.py  logger.py  pipeline_logger.py
tests/: conftest.py  test_cli_formatting.py  test_config_manager.py  test_device_utils.py  test_document_loader.py  test_file_registry.py  test_pipeline_utils.py  test_vector_store_manager.py
